[gd_scene load_steps=2 format=3 uid="uid://cbkx13ybeghi3"]

[ext_resource type="Script" uid="uid://c5vfyvfosky2i" path="res://inventory/ui/inventory_ui.gd" id="1_63n75"]

[node name="InventoryUI" type="Control" groups=["ui_layer"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_63n75")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
