[gd_scene load_steps=5 format=3 uid="uid://bldqwktb618w7"]

[ext_resource type="Script" uid="uid://bmqckbr01623u" path="res://src/game/inventory/ui/inventory_ui.gd" id="1_63n75"]
[ext_resource type="PackedScene" uid="uid://c3lxbj2vtqg0h" path="res://src/game/inventory/ui/slot/Slot.tscn" id="2_uboxp"]
[ext_resource type="Texture2D" uid="uid://cchf7aqj3oxcb" path="res://assets/textures/inventory/element.png" id="3_utsdy"]
[ext_resource type="Texture2D" uid="uid://dhqnf0sn4prn2" path="res://assets/textures/inventory/camera.png" id="4_hm8mi"]

[node name="InventoryUi" type="Control" groups=["ui_layer"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_63n75")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1153.0
offset_bottom = 646.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PickUpSlot" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_uboxp")]
layout_mode = 2
size_flags_horizontal = 8
sprite = ExtResource("3_utsdy")
label = "10"

[node name="DocumentableSlot" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_uboxp")]
layout_mode = 2
size_flags_horizontal = 8
sprite = ExtResource("4_hm8mi")
label = "5"
